--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,19 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>java</packaging>
 
+    <dependencies>
+        <!-- JSON Library ~ org.json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <!-- Unirest ~ com.mashape.unirest -->
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.8</version>
+        </dependency>
+    </dependencies>
+
 </project>
